partial/force-app/main/default/objects/Contact/fields/AML_Status__c.field-meta.xml
<CustomField>
    <fullName>AML_Status__c</fullName>
    <formula>IF( (Is_AML_Checked__c = False &amp;&amp; PEP_Flagged__c = False &amp;&amp; SIP_Flagged__c = False), &quot;⚠️ Not Checked Yet&quot; , 
IF( (Is_AML_Checked__c = True &amp;&amp;(PEP_Flagged__c = True || SIP_Flagged__c = True)), &quot;⛔ Flagged&quot;,
IF( (Is_AML_Checked__c = False &amp;&amp; (PEP_Flagged__c = True || SIP_Flagged__c = True)), &quot;🚫 Error&quot;, &quot;✅ Passed&quot;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AML Status</label>
    <type>Text</type>
</CustomField>