partial/force-app/main/default/objects/Contact/fields/buildingName__c.field-meta.xml
<CustomField>
    <fullName>buildingName__c</fullName>
    <label>Building Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>