partial/force-app/main/default/objects/Contact/fields/CEARegistrationNo__c.field-meta.xml
<CustomField>
    <fullName>CEARegistrationNo__c</fullName>
    <externalId>true</externalId>
    <label>CEA Registration No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>