partial/force-app/main/default/objects/Contact/fields/CommunicationPreferenceEmail__c.field-meta.xml
<CustomField>
    <fullName>CommunicationPreferenceEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email</label>
    <type>Checkbox</type>
</CustomField>