partial/force-app/main/default/objects/Contact/fields/CommunicationPreferenceLetter__c.field-meta.xml
<CustomField>
    <fullName>CommunicationPreferenceLetter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter</label>
    <type>Checkbox</type>
</CustomField>