partial/force-app/main/default/objects/Contact/fields/CommunicationPreferencePhone__c.field-meta.xml
<CustomField>
    <fullName>CommunicationPreferencePhone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone</label>
    <type>Checkbox</type>
</CustomField>