partial/force-app/main/default/objects/Contact/fields/Country_ID__c.field-meta.xml
<CustomField>
    <fullName>Country_ID__c</fullName>
    <label>Country ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>