partial/force-app/main/default/objects/Contact/fields/CountryISOCode__c.field-meta.xml
<CustomField>
    <fullName>CountryISOCode__c</fullName>
    <label>Country ISO Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_ISO_Code</valueSetName>
    </valueSet>
</CustomField>