partial/force-app/main/default/objects/Contact/fields/fromArchieve__c.field-meta.xml
<CustomField>
    <fullName>fromArchieve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Archieve</label>
    <type>Checkbox</type>
</CustomField>