partial/force-app/main/default/objects/Contact/fields/IdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>IdentificationNumber__c</fullName>
    <label>Identification Number</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>