partial/force-app/main/default/objects/Contact/fields/IdentificationNumberType__c.field-meta.xml
<CustomField>
    <fullName>IdentificationNumberType__c</fullName>
    <label>Identification Number Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>NRIC</fullName>
            </value>
            <value>
                <fullName>E-Pass</fullName>
            </value>
            <value>
                <fullName>S-Pass</fullName>
            </value>
            <value>
                <fullName>Work Permit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>