partial/force-app/main/default/objects/Contact/fields/Is_AML_Checked__c.field-meta.xml
<CustomField>
    <fullName>Is_AML_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if AML had been conducted for this Contact</inlineHelpText>
    <label>Is AML Checked?</label>
    <type>Checkbox</type>
</CustomField>