partial/force-app/main/default/objects/Contact/fields/line2__c.field-meta.xml
<CustomField>
    <fullName>line2__c</fullName>
    <label>Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>