partial/force-app/main/default/objects/Contact/fields/Links__c.field-meta.xml
<CustomField>
    <fullName>Links__c</fullName>
    <label>Links</label>
    <length>250</length>
    <type>Text</type>
</CustomField>