partial/force-app/main/default/objects/Contact/fields/PEP_Flagged__c.field-meta.xml
<CustomField>
    <fullName>PEP_Flagged__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if Contact is Politically Exposed Persons</inlineHelpText>
    <label>PEP Flagged?</label>
    <type>Checkbox</type>
</CustomField>