partial/force-app/main/default/objects/Contact/fields/Portal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Portal_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Contact</label>
    <type>Checkbox</type>
</CustomField>