partial/force-app/main/default/objects/Contact/fields/SIP_Flagged__c.field-meta.xml
<CustomField>
    <fullName>SIP_Flagged__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if Contact is Special Interest Persons</inlineHelpText>
    <label>SIP Flagged?</label>
    <type>Checkbox</type>
</CustomField>