partial/force-app/main/default/objects/Contact/recordTypes/Agent_Contact.recordType-meta.xml
<RecordType>
    <fullName>Agent_Contact</fullName>
    <active>true</active>
    <label>Agent Contact</label>
</RecordType>