partial/force-app/main/default/objects/Contact/listViews/All_Agent_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Agent_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Gender__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CEARegistrationNo__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>IsActive__c</columns>
    <columns>ACCOUNT.OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Agent_Contact</value>
    </filters>
    <label>All Agent Contacts</label>
</ListView>